--- a/src/app/pages/blog-page/blog-page.component.css
+++ b/src/app/pages/blog-page/blog-page.component.css
@@ -27,3 +27,8 @@ h2{
     font-size: 18px;
     margin-bottom: 30px;
 }
+.skeleton-spacing{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
