--- a/src/app/pages/blogs/blogs.component.css
+++ b/src/app/pages/blogs/blogs.component.css
@@ -48,12 +48,15 @@
   
   .blog {
     padding: 10px;
-    height: 220px;
+    height: 250px;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
     gap: 20px;
     border: solid 1px transparent ;
+    
+    border: solid 1px var(--bordercolor) ;
+    background-color: var(--soft-bgcolor);
     
   }
   
@@ -67,14 +70,11 @@
   
   .blog-title {
     color: var(--maincolor);
-    font-size: 25px;
+    font-size: 24px;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient:  vertical;
     overflow:  hidden;
-  }
-  .blog-title:hover {
-    text-decoration: underline;
   }
   .blog-description{
     display: -webkit-box;
@@ -92,6 +92,11 @@
     overflow:  hidden;
   }
   
+  
+  .button-div{
+    position: absolute;
+    bottom: 40px;
+  }
   .blog-tags {
     display: flex;
     gap: 5px;
@@ -116,14 +121,25 @@
   }
   
   .blog-img {
-    width: 220px;
-    height: 210px;
+    width: 230px;
+    height: 230px;
+    position: relative;
   }
   .blog-img img{
-    width: 220px;
-    height: 210px;
+    width: 230px;
+    height: 230px;
     border-radius: 10px;
     overflow: hidden;
+  }
+  .blog-level{
+    position: absolute;
+    background-color: var(--special-button-background);
+    color: var(--special-button-color);
+    font-size: 18px;
+    width: max-content;
+    bottom: 10px;
+    padding: 10px 20px;
+    border-top-right-radius: 10px;
   }
   .right-section {  
     width: 300px; 
