updating blog page

--- a/src/app/pages/blogs/blogs.component.css
+++ b/src/app/pages/blogs/blogs.component.css
@@ -129,7 +129,7 @@
   }
   .blog-level{
     position: absolute;
-    background:linear-gradient(to right, #a0ecf6 , #aafcc5 );
+    background:linear-gradient(to right, #f6a0c4 , #9089fc );
     color: black;
     font-size: 18px;
     width: max-content;
