--- a/src/app/components/search-section/search-section.component.css
+++ b/src/app/components/search-section/search-section.component.css
@@ -39,3 +39,15 @@
 .ng-template{
     width: 100%;
 }
+.silver-color {
+    color: silver;
+  }
+  
+  .green-color {
+    color: green;
+  }
+  
+  .gold-color {
+    color: gold;
+  }
+  
